# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")

ohos_shared_library("sg_db_store") {
  subsystem_name = "security"
  part_name = "security_guard"

  include_dirs = [
    "//third_party/json/include",
    "${sg_root_dir}/services/model_analysis/include",
    "${sg_root_dir}/services/risk_collect/include",
    "${sg_root_dir}/frameworks/common/constants/include",
    "${sg_root_dir}/frameworks/common/json/include",
    "${sg_root_dir}/frameworks/common/database/include",
    "${sg_root_dir}/frameworks/common/log/include",
    "${sg_root_dir}/frameworks/common/utils/include",
  ]

  sources = [
    "${sg_root_dir}/services/risk_collect/store/src/base_event_id.cpp",
    "${sg_root_dir}/services/risk_collect/store/src/base_event_id_storage.cpp",
    "${sg_root_dir}/services/risk_collect/store/src/data_manager.cpp",
    "${sg_root_dir}/services/risk_collect/store/src/data_manager_wrapper.cpp",
    "${sg_root_dir}/services/risk_collect/store/src/data_storage.cpp",
    "${sg_root_dir}/services/risk_collect/store/src/database.cpp",
    "${sg_root_dir}/services/risk_collect/store/src/database_wrapper.cpp",
    "${sg_root_dir}/services/risk_collect/store/src/database_manager.cpp",
    "${sg_root_dir}/frameworks/common/utils/src/security_guard_utils.cpp",
  ]

  cflags_cc = [
    "-DHILOG_ENABLE"
  ]

  deps = [
    "${sg_root_dir}/services/model_analysis:sg_model_analysis",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "c_utils:utils",
    "kv_store:distributeddata_inner",
  ]
}

ohos_source_set("sg_uevent_listener_stamp") {
  subsystem_name = "security"
  part_name = "security_guard"

  include_dirs = [
    "//third_party/json/include",
    "${sg_root_dir}/services/risk_collect/include",
    "${sg_root_dir}/frameworks/common/constants/include",
    "${sg_root_dir}/frameworks/common/database/include",
    "${sg_root_dir}/frameworks/common/log/include",
    "${sg_root_dir}/services/model_analysis/include",
    "${sg_root_dir}/frameworks/common/task/include",
    "${sg_root_dir}/frameworks/common/threadpool/include",
    "${sg_root_dir}/frameworks/common/json/include",
  ]

  sources = [
    "${sg_root_dir}/services/risk_collect/src/data_format.cpp",
    "${sg_root_dir}/frameworks/common/task/src/data_collect_task.cpp",
  ]

  cflags_cc = [
    "-DHILOG_ENABLE"
  ]

  deps = [
    "${sg_root_dir}/frameworks/common/task:sg_task_stamp",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "c_utils:utils",
    "hdf_core:libhdf_ipc_adapter",
    "kv_store:distributeddata_inner",
  ]
}

ohos_shared_library("sg_collect_service") {
  subsystem_name = "security"
  part_name = "security_guard"

  include_dirs = [
    "//third_party/json/include",
    "${sg_root_dir}/services/model_analysis/include",
    "${sg_root_dir}/services/risk_collect/include",
    "${sg_root_dir}/frameworks/common/constants/include",
    "${sg_root_dir}/frameworks/common/json/include",
    "${sg_root_dir}/frameworks/common/task/include",
    "${sg_root_dir}/frameworks/common/threadpool/include",
    "${sg_root_dir}/frameworks/common/database/include",
    "${sg_root_dir}/frameworks/common/log/include",
  ]

  sources = [
    "${sg_root_dir}/services/risk_collect/src/data_collect_manager_callback_proxy.cpp",
    "${sg_root_dir}/services/risk_collect/src/data_collect_manager_service.cpp",
    "${sg_root_dir}/services/risk_collect/src/data_collect_manager_stub.cpp",
    "${sg_root_dir}/frameworks/common/task/src/data_distribute_task.cpp",
    "${sg_root_dir}/frameworks/common/task/src/load_db_task.cpp",
  ]

  cflags_cc = [
    "-DHILOG_ENABLE"
  ]

  deps = [
    ":sg_db_store",
    ":sg_uevent_listener_stamp",
    "${sg_root_dir}/services/model_analysis:sg_model_analysis",
    "${sg_root_dir}/frameworks/common/task:sg_task_stamp",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "c_utils:utils",
    "kv_store:distributeddata_inner",
  ]
}
