# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")
ohos_source_set("security_collector_service_stamp") {
  subsystem_name = "security"
  part_name = "security_guard"

  include_dirs = [
    "${sg_root_dir}/interfaces/inner_api/common/include",
    "${sg_root_dir}/interfaces/inner_api/collector/include",
    "${sg_root_dir}/frameworks/common/collector/include",
    "${sg_root_dir}/services/collector_manager/include",
    "${sg_root_dir}/services/security_collector/include",
    "${sg_root_dir}/frameworks/common/log/include",
    "${sg_root_dir}/frameworks/common/constants/include",
    "${sg_root_dir}/frameworks/common/task_handler/include",
    "${sg_root_dir}/frameworks/common/json/include",
    "${sg_root_dir}/frameworks/common/utils/include",
  ]

  defines = []
  defines += [
    "SECURITY_GUARD_EVENT_CFG_SOURCE = \"${security_guard_event_cfg_source}\"",
    "SECURITY_GUARD_MODEL_CFG_SOURCE = \"${security_guard_model_cfg_source}\"",
    "SECURITY_GUARD_EVENT_GROUP_CFG_SOURCE = \"${security_guard_event_group_cfg_source}\"",
    "SECURITY_GUARD_CONFIG_UPDATE_TRUST_LIST_SOURCE = \"${security_guard_config_update_trust_list_source}\"",
    "SECURITY_GUARD_COLLECTOR_CFG_SOURCE = \"${security_guard_collector_cfg_source}\"",
  ]
  sources = [
    "${sg_root_dir}/frameworks/common/collector/src/security_collector_event_filter.cpp",
    "${sg_root_dir}/frameworks/common/collector/src/security_collector_subscribe_info.cpp",
    "${sg_root_dir}/services/security_collector/src/security_collector_manager_callback_proxy.cpp",
    "${sg_root_dir}/services/security_collector/src/security_collector_manager_service.cpp",
    "${sg_root_dir}/services/security_collector/src/security_collector_manager_stub.cpp",
    "${sg_root_dir}/services/security_collector/src/security_collector_run_manager.cpp",
    "${sg_root_dir}/services/security_collector/src/security_collector_subscriber_manager.cpp",
  ]

  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  deps = [
    "${sg_root_dir}/frameworks/common/collect:libsg_collect_sdk",
    "${sg_root_dir}/frameworks/common/collector:libsg_collector_sdk",
    "${sg_root_dir}/services/collector_manager:security_collector_manager",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hisysevent:libhisyseventmanager",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "os_account:os_account_innerkits",
    "preferences:native_preferences",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_shared_library("security_collector_service") {
  subsystem_name = "security"
  part_name = "security_guard"
  version_script = "security_collector_service.map"

  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  deps = [
    ":security_collector_service_stamp",
  ]

  external_deps = [
    "hilog:libhilog",
  ]
}
