# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/test.gni")

ohos_unittest("SecurityGuardUnitTest") {
  install_enable = true
  subsystem_name = "security"
  part_name = "security_guard"
  module_out_path = subsystem_name + "/" + part_name

  include_dirs = [
    "//third_party/json/include",
    "${sg_root_dir}/services/utils/include",
    "${sg_root_dir}/services/model_analysis/include",
    "${sg_root_dir}/services/risk_classify/include",
    "${sg_root_dir}/services/risk_collect/include",
    "${sg_root_dir}/frameworks/common/constants/include",
    "${sg_root_dir}/frameworks/common/json/include",
    "${sg_root_dir}/frameworks/common/task/include",
    "${sg_root_dir}/frameworks/common/threadpool/include",
    "${sg_root_dir}/frameworks/common/database/include",
    "${sg_root_dir}/frameworks/common/log/include",
    "${sg_root_dir}/services/model_analysis/include",
    "${sg_root_dir}/services/risk_classify/include",
    "${sg_root_dir}/services/risk_collect/include",
    "${sg_root_dir}/interfaces/inner_api/obtaindata/include",
    "${sg_root_dir}/interfaces/inner_api/classify/include",
    "${sg_root_dir}/interfaces/inner_api/clollect/include",
  ]

  sources = [
    "security_guard_test.cpp",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  deps = [
    "//third_party/googletest:gmock",
    "${sg_root_dir}/services/model_analysis:sg_model_analysis",
    "${sg_root_dir}/services/risk_classify:sg_classify_service",
    "${sg_root_dir}/services/risk_collect:sg_collect_service",
    "${sg_root_dir}/interfaces/inner_api/classify:libsg_classify_sdk",
    "${sg_root_dir}/interfaces/inner_api/collect:libsg_collect_sdk",
    "${sg_root_dir}/interfaces/inner_api/obtaindata:libsg_obtaindata_sdk",
  ]

  external_deps = [
    "kv_store:distributeddata_inner",
    "hiviewdfx_hilog_native:libhilog",
    "c_utils:utils",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "safwk:system_ability_fwk",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":SecurityGuardUnitTest" ]
}
