# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")

ohos_source_set("sg_task_stamp") {
  subsystem_name = "security"
  part_name = "security_guard"

  include_dirs = [
    "${sg_root_dir}/frameworks/common/constants/include",
    "${sg_root_dir}/frameworks/common/task/include",
    "${sg_root_dir}/frameworks/common/threadpool/include",
    "${sg_root_dir}/frameworks/common/log/include",
  ]

  sources = [
    "${sg_root_dir}/frameworks/common/task/src/task_manager.cpp",
    "${sg_root_dir}/frameworks/common/task/src/base_task.cpp",
    "${sg_root_dir}/frameworks/common/threadpool/src/thread_pool.cpp",
  ]

  cflags_cc = [
      "-DHILOG_ENABLE"
  ]

  deps = [
    #"${sg_root_dir}/services/model_analysis:sg_model_analysis",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "c_utils:utils",
  ]
}