# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")

ohos_source_set("sg_task_stamp") {
  subsystem_name = "security"
  part_name = "security_guard"

  include_dirs = [ "${sg_root_dir}/frameworks/common/task_handler/include" ]

  sources =
      [ "${sg_root_dir}/frameworks/common/task_handler/src/task_handler.cpp" ]

  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "${sg_root_dir}/cfi_blocklist.txt"
  }
  stack_protector_ret = true

  external_deps = [ "c_utils:utils" ]
}
