# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")

ohos_shared_library("securityguard_napi") {
  include_dirs = [
    "${sg_root_dir}/frameworks/common/constants/include",
    "${sg_root_dir}/frameworks/common/log/include",
    "${sg_root_dir}/frameworks/common/interfaces",
    "${sg_root_dir}/frameworks/common/utils/include",
    "${sg_root_dir}/frameworks/js/napi",
    "${sg_root_dir}/interfaces/inner_api/obtaindata/include",
    "${sg_root_dir}/interfaces/inner_api/collect/include",
    "${sg_root_dir}/interfaces/inner_api/collector/include",
    "${sg_root_dir}/interfaces/inner_api/data_collect_manager/include",
    "${sg_root_dir}/interfaces/inner_api/classify/include",
  ]

  sources = [
    "${sg_root_dir}/frameworks/common/utils/src/security_guard_utils.cpp",
    "${sg_root_dir}/interfaces/inner_api/classify/src/risk_analysis_manager_callback_service.cpp",
    "${sg_root_dir}/interfaces/inner_api/classify/src/risk_analysis_manager_callback_stub.cpp",
    "${sg_root_dir}/interfaces/inner_api/classify/src/risk_analysis_manager_proxy.cpp",
    "${sg_root_dir}/interfaces/inner_api/collect/src/event_info.cpp",
    "${sg_root_dir}/interfaces/inner_api/collector/src/collector_service_loader.cpp",
    "${sg_root_dir}/interfaces/inner_api/collector/src/security_collector_manager_callback_service.cpp",
    "${sg_root_dir}/interfaces/inner_api/collector/src/security_collector_manager_callback_stub.cpp",
    "${sg_root_dir}/interfaces/inner_api/collector/src/security_collector_manager_proxy.cpp",
    "${sg_root_dir}/interfaces/inner_api/collector/src/security_collector_subscribe_info.cpp",
    "${sg_root_dir}/interfaces/inner_api/data_collect_manager/src/data_collect_manager_callback_service.cpp",
    "${sg_root_dir}/interfaces/inner_api/data_collect_manager/src/data_collect_manager_callback_stub.cpp",
    "${sg_root_dir}/interfaces/inner_api/data_collect_manager/src/data_collect_manager_proxy.cpp",
    "napi_request_data_manager.cpp",
    "security_guard_napi.cpp",
    "security_guard_sdk_adaptor.cpp",
  ]

  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "${sg_root_dir}/cfi_blocklist.txt"
  }
  stack_protector_ret = true

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]

  relative_install_dir = "module/security"
  subsystem_name = "security"
  part_name = "security_guard"
}
