# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")

ohos_shared_library("securityguard_napi") {
  include_dirs = [
    "${sg_root_dir}/frameworks/common/constants/include",
    "${sg_root_dir}/frameworks/js/napi",
    "${sg_root_dir}/frameworks/common/log/include",
  ]

  sources = [
    "napi_request_data_manager.cpp",
    "napi_security_event_querier.cpp",
    "security_guard_napi.cpp",
    "security_guard_sdk_adaptor.cpp",
  ]
  defines = []
  if (security_guard_trim_model_analysis) {
    defines += [ "SECURITY_GUARD_TRIM_MODEL_ANALYSIS" ]
  }
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  deps = [
    "${sg_root_dir}/frameworks/common/classify:libsg_classify_sdk",
    "${sg_root_dir}/frameworks/common/collect:libsg_collect_sdk",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "samgr:samgr_proxy",
    "ffrt:libffrt",
  ]

  relative_install_dir = "module/security"
  subsystem_name = "security"
  part_name = "security_guard"
}
