# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")

config("security_guard_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${sg_root_dir}/frameworks/common/interfaces",
    "${sg_root_dir}/interfaces/inner_api/common/include",
    "${sg_root_dir}/interfaces/inner_api/collector/include",
    "${sg_root_dir}/services/security_collector/include",
  ]
}

ohos_shared_library("libsg_collector_sdk") {
  subsystem_name = "security"
  part_name = "security_guard"
  output_name = "libsg_collector_sdk"

  public_configs = [ ":security_guard_config" ]

  include_dirs = [
    "include",
    "${sg_root_dir}/frameworks/common/interfaces",
    "${sg_root_dir}/frameworks/common/constants/include",
    "${sg_root_dir}/frameworks/common/log/include",
    "${sg_root_dir}/interfaces/inner_api/common/include",
    "${sg_root_dir}/interfaces/inner_api/collector/include",
    "${sg_root_dir}/services/security_collector/include",
  ]

  sources = [
    "src/collector_manager.cpp",
    "src/collector_service_loader.cpp",
    "src/security_collector_manager_callback_service.cpp",
    "src/security_collector_manager_callback_stub.cpp",
    "src/security_collector_manager_proxy.cpp",
    "src/security_collector_subscribe_info.cpp",
  ]

  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "${sg_root_dir}/cfi_blocklist.txt"
  }
  stack_protector_ret = true

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
}
