# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")

ohos_ndk_library("libsecurityguard_ndk") {
  output_name = "securityguard_ndk"
  output_extension = "z.so"
  ndk_description_file = "./libsecurityguard.ndk.json"

  # min_compact_version = "1"
  # system_capability = "SystemCapability.Security.SecurityGuard"
}

ohos_ndk_headers("securityguard_header") {
  dest_dir = "$ndk_headers_out_dir/security_guard"
  sources = [
    "./include/native_sg_classify_api.h",
    "./include/native_sg_type.h",
  ]
}

ohos_shared_library("securityguard_ndk") {
  defines = []

  include_dirs = [
    "include",
    "${sg_root_dir}/interfaces/inner_api/classify/include",
    "${sg_root_dir}/interfaces/inner_api/common/include",
    "${sg_root_dir}/frameworks/common/constants/include",
    "${sg_root_dir}/frameworks/common/log/include",
    "${sg_root_dir}/services/risk_classify/include",
  ]

  sources = [ "${sg_root_dir}/interfaces/kits/c/src/native_sg_classify_api.c" ]

  deps = [ "${sg_root_dir}/interfaces/inner_api/classify:libsg_classify_sdk" ]

  cflags_cc = []

  relative_install_dir = "ndk"
  part_name = "security_guard"
  subsystem_name = "security"
}
