# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/security_guard/security_guard.gni")
import("//build/ohos.gni")

ohos_shared_library("dns_event") {
  subsystem_name = "security"
  part_name = "security_guard"

  include_dirs = [
    "//third_party/json/include",
    "include",
  ]

  sources = [
    "${sg_root_dir}/services/collectors/dns_event/src/dns_subscriber_manager.cpp",
    "${sg_root_dir}/services/collectors/dns_event/src/dns_subscriber.cpp",
    "${sg_root_dir}/services/collectors/dns_event/src/interface.cpp",
    "${sg_root_dir}/services/collectors/dns_event/src/dns_cache.cpp",
  ]

  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "${sg_root_dir}/cfi_blocklist.txt"
  }
  stack_protector_ret = true

  cflags_cc = [ "-DHILOG_ENABLE" ]

  deps = [
    "${sg_root_dir}/interfaces/inner_api/collect:libsg_collect_sdk",
    "${sg_root_dir}/interfaces/inner_api/collector:libsg_collector_sdk",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "netmanager_base:netsys_controller",
    "netmanager_base:net_native_manager_if",
  ]
}
